# ephimeral-cronjob-operator

./: Dockerfile  README.md  ephimeralcronjob.example.yaml  ephimeralcronjob.py  pyproject.toml
.github/workflows/: release-helm-chart.yaml  release-operator.yaml
charts/ephimeral-cronjob/: Chart.yaml  values.yaml
charts/ephimeral-cronjob-operator/: Chart.yaml  values.yaml
charts/ephimeral-cronjob-operator/crds/: ephimeralcronjob.crd.yaml
charts/ephimeral-cronjob-operator/templates/: clusterrolebinding.yaml  clusterroles.yaml  roleboinding.yaml  roles.yaml  serviceaccount.yaml
charts/ephimeral-cronjob/templates/: _helpers.tpl  clusterroles.yaml  deployment.yaml
podtemplates/: ephimeral.yaml
templates/: job-template.yaml
